<resources>
    <string name="app_name">Food Runner</string>
    <string name="food_runner">FoodRunner</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="enter_your_name_min_3_characters">Enter your name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="choose_a_password_min_4_characters">Choose a Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="register">Register</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="welcome">WELCOME</string>
    <string name="registration_details">Registration Details</string>
    <string name="preference_file">FoodRunner Preferences</string>
</resources>