<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5039"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:drawablePadding="30dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24" />



    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRegister"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/enter_your_name_min_3_characters"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNo"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/delivery_address"
        android:inputType="text" />

    <EditText
        android:id="@+id/etChoosePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDeliveryAddress"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/choose_a_password_min_4_characters"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etChoosePassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="2dp"
        android:background="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:backgroundTint="#EE2732"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="30sp"/>

</RelativeLayout>